menu page changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
         
         <!--RESTAURANTS-->
-        <section class="restaurants">
+        <section class="restaurants" id="restaurants">
             <h1>Restaurants</h1>
             <a href="#" class="restaurants__card">
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image_la_palette_du_gout" class="restaurants__card--img">
@@ -94,7 +94,7 @@
                 </div>
             </a>
 
-            <a href="#" class="restaurants__card">
+            <a href="./html/a_la_francaise.html" class="restaurants__card">
                 <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image_À_la_française" class="restaurants__card--img">
                 <div class="restaurants__card--legende">
                     <div class="restaurants__card--legende--texte">
@@ -118,7 +118,7 @@
         </section>
     </main> 
     <footer>
-            <h2>ohmyfood</h2>
+            <h4>ohmyfood</h4>
             <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
             <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
             <a href="#" class="footer__fin">Mentions légales</a>
