menu page final changes

--- a/html/a_la_francaise.html
+++ b/html/a_la_francaise.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <a href="../index.html#restaurants"><i class="fa-solid fa-arrow-left"></i></a>
-        <img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood">
+        <a href="../index.html"><img src="../assets/images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood"></a>
         <figure>
             <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image du restaurant À la francaise">
         </figure>
