--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="description">
             <h1>Réservez&nbsp;le&nbsp;menu&nbsp;qui<br>vous&nbsp;convient</h1>
             <p>Découvrez&nbsp;des&nbsp;restaurants d'exception,<br>séléctionnés&nbsp;par&nbsp;nos&nbsp;soins.</p>
-            <a href="#" class="description__button">Explorer nos restaurants</a>
+            <a href="#restaurants" class="description__button">Explorez nos restaurants</a>
         </section>
 
         <!--FONCTIONNEMENT-->
