checked and heart animations

--- a/html/la_palette-du-gout.html
+++ b/html/la_palette-du-gout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="reservez le menu qui vous convient">
-    <title>À la française</title>
+    <title>La palette du goût</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="titre">
-            <h1>À la française
+            <h1>La palette du goût
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart"></i>
             </h1>
@@ -45,9 +45,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3>Fricassée d'escargot</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Aux zets d'orange</p>
+                        <p>Au piment d'Espelette</p>
                         <span>25€</span>
                     </div>
                 </div>
@@ -58,9 +58,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3>Foie gras de canard mi-cuit</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Et ses copeaux de truffe noire</p>
                         <span>35€</span>
                     </div>
                 </div>
@@ -71,9 +71,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Soupe à l'oignon</h3>
+                    <h3>Oeuf au plat</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Revisitée</p>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                         <span>20€</span>
                     </div>
                 </div>
@@ -91,9 +91,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Coquilles Saint-Jacques</h3>
+                    <h3>Filet de boeuf aux herbes</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Accompagnées d'une purée de panais</p>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                         <span>40€</span>
                     </div>
                 </div>
@@ -104,9 +104,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Magret de canard</h3>
+                    <h3>Parmentier de queue de boeuf</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Et parmentier de pommes de terre</p>
+                        <p>À la truffe noire sur sa purée de panais</p>
                         <span>35€</span>
                     </div>
                 </div>
@@ -117,9 +117,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    <h3>Filet de turbot</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>Aux agrumes</p>
                         <span>44€</span>
                     </div>
                 </div>
@@ -137,9 +137,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Pétales de violettes glacés</h3>
+                    <h3>Paris-Brest</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Et purée de noisettes</p>
+                        <p>Revisité</p>
                         <span>18€</span>
                     </div>
                 </div>
@@ -150,9 +150,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Fondant au chocolat</h3>
+                    <h3>Macaron au chocolat d'exception</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Revisité</p>
+                        <p>Et glace à la vanille de Madagascar</p>
                         <span>22€</span>
                     </div>
                 </div>
@@ -163,9 +163,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Millefeuille croustillant</h3>
+                    <h3>Mousse au chocolat</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Myrtilles et pâte d'amande</p>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                         <span>23€</span>
                     </div>
                 </div>
