--- a/html/le_delice_des_sens.html
+++ b/html/le_delice_des_sens.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="reservez le menu qui vous convient">
-    <title>À la française</title>
+    <title>Le délice des sens</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
@@ -31,9 +31,9 @@
     </header>
     <main>
         <section class="titre">
-            <h1>À la française
+            <h1>Le délice des sens
                 <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
             </h1>
         </section>
 
@@ -45,9 +45,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3>Tartare de thon</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Aux zets d'orange</p>
+                        <p>Assaisonné au yuzue</p>
                         <span>25€</span>
                     </div>
                 </div>
@@ -58,9 +58,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3>Bouchée de homard croustillantn</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Et sa farandole de petits légumes</p>
                         <span>35€</span>
                     </div>
                 </div>
@@ -71,9 +71,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Soupe à l'oignon</h3>
+                    <h3>Velouté de cèpes</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Revisitée</p>
+                        <p>Aux truffes</p>
                         <span>20€</span>
                     </div>
                 </div>
@@ -91,9 +91,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Coquilles Saint-Jacques</h3>
+                    <h3>Poulet rôti aux herbes de Provence</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Accompagnées d'une purée de panais</p>
+                        <p>Et sa crème de truffe</p>
                         <span>40€</span>
                     </div>
                 </div>
@@ -104,9 +104,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Magret de canard</h3>
+                    <h3>Langouste rôtie</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Et parmentier de pommes de terre</p>
+                        <p>Et ses légumes de saison</p>
                         <span>35€</span>
                     </div>
                 </div>
@@ -117,9 +117,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    <h3>Côte de boeuf Angus</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>Et sa purée de panais</p>
                         <span>44€</span>
                     </div>
                 </div>
@@ -137,9 +137,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Pétales de violettes glacés</h3>
+                    <h3>Farandole de desserts</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Et purée de noisettes</p>
+                        <p>Du chef</p>
                         <span>18€</span>
                     </div>
                 </div>
@@ -150,9 +150,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Fondant au chocolat</h3>
+                    <h3>Crème brulée</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Revisité</p>
+                        <p>Revisitée</p>
                         <span>22€</span>
                     </div>
                 </div>
@@ -163,9 +163,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Millefeuille croustillant</h3>
+                    <h3>Tiramisu</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Myrtilles et pâte d'amande</p>
+                        <p>À la noisette</p>
                         <span>23€</span>
                     </div>
                 </div>
