--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="reservez le menu qui vous convient">
-    <title>À la française</title>
+    <title>La note enchantée</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="titre">
-            <h1>À la française
+            <h1>La note enchantée
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-heart"></i>
             </h1>
@@ -45,9 +45,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3>Ravioles de foie gras</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Aux zets d'orange</p>
+                        <p>Accompagnés de leur crème à la truffe</p>
                         <span>25€</span>
                     </div>
                 </div>
@@ -58,9 +58,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3>Caviar osciètre</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Carotte, panais, topinambour</p>
+                        <p>Sur blini à la farine de blé noir</p>
                         <span>35€</span>
                     </div>
                 </div>
@@ -71,10 +71,23 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Soupe à l'oignon</h3>
+                    <h3>Homard et espuma de potiron</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Revisitée</p>
+                        <p>Mariné aux zestes d'orange</p>
                         <span>20€</span>
+                    </div>
+                </div>
+                <div class="menu__card--mobile">
+                    <i class="fa-solid fa-circle-check"></i>
+                </div>
+            </a>
+
+            <a href="#" class="menu__card">
+                <div class="menu__card--fixe">
+                    <h3>Foie gras de canard cuit entier</h3>
+                    <div class="menu__card--fixe--bottom">
+                        <p>Confiture de figue et pain toasté</p>
+                        <span>35€</span>
                     </div>
                 </div>
                 <div class="menu__card--mobile">
@@ -91,9 +104,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Coquilles Saint-Jacques</h3>
+                    <h3>Noix de coquilles Saint-Jacques</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Accompagnées d'une purée de panais</p>
+                        <p>Sur lit de purée de céleri-rave</p>
                         <span>40€</span>
                     </div>
                 </div>
@@ -104,9 +117,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Magret de canard</h3>
+                    <h3>Langoustine poêlée</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Et parmentier de pommes de terre</p>
+                        <p>Purée de patate douce</p>
                         <span>35€</span>
                     </div>
                 </div>
@@ -117,9 +130,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    <h3>Mijoté de queue de boeuf</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <p>Et riz sauvage aux zestes de citron</p>
                         <span>44€</span>
                     </div>
                 </div>
@@ -137,9 +150,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Pétales de violettes glacés</h3>
+                    <h3>Macaron noisette et chocolat</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Et purée de noisettes</p>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                         <span>18€</span>
                     </div>
                 </div>
@@ -150,9 +163,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Fondant au chocolat</h3>
+                    <h3>Baba au rhum revisité</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Revisité</p>
+                        <p>Avec son coulis de citron</p>
                         <span>22€</span>
                     </div>
                 </div>
@@ -163,9 +176,9 @@
 
             <a href="#" class="menu__card">
                 <div class="menu__card--fixe">
-                    <h3>Millefeuille croustillant</h3>
+                    <h3>Tarte au citron meringuée</h3>
                     <div class="menu__card--fixe--bottom">
-                        <p>Myrtilles et pâte d'amande</p>
+                        <p>Déstructurée</p>
                         <span>23€</span>
                     </div>
                 </div>
