--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!--FONCTIONNEMENT-->
         <section class="fonctionnement">
             <h1>Fonctionnement</h1>
-            <a href="#" class="fonctionnement__btn">
+            <a href="#restaurants" class="fonctionnement__btn">
                 <button type="button" class="fonctionnement__btn--ordre">1</button>
                 <i class="fa-solid fa-mobile-screen-button">
                     <span>Choississez un restaurant</span>
@@ -70,7 +70,7 @@
         <!--RESTAURANTS-->
         <section class="restaurants" id="restaurants">
             <h1>Restaurants</h1>
-            <a href="#" class="restaurants__card">
+            <a href="./html/la_palette-du-gout.html" class="restaurants__card">
                 <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image_la_palette_du_gout" class="restaurants__card--img">
                 <p class="restaurants__card--img--nouveau">Nouveau</p>
                 <div class="restaurants__card--legende">
@@ -78,11 +78,15 @@
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <div class="restaurants__card--legende--heart">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+                    
                 </div>
             </a>
 
-            <a href="#" class="restaurants__card">
+            <a href="./html/la_note_enchantee.html" class="restaurants__card">
                 <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image_la_note_enchantée" class="restaurants__card--img">
                 <p class="restaurants__card--img--nouveau">Nouveau</p>
                 <div class="restaurants__card--legende">
@@ -90,7 +94,10 @@
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <div class="restaurants__card--legende--heart">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </a>
 
@@ -101,18 +108,24 @@
                         <h3>À la française</h3>
                         <p>Cité rouge</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <div class="restaurants__card--legende--heart">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </a>
 
-            <a href="#" class="restaurants__card">
+            <a href="./html/le_delice_des_sens.html" class="restaurants__card">
                 <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image_Le_délice-des-sens" class="restaurants__card--img">
                 <div class="restaurants__card--legende">
                     <div class="restaurants__card--legende--texte">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
                     </div>
-                    <i class="fa-regular fa-heart"></i>
+                    <div class="restaurants__card--legende--heart">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </a>
         </section>
