--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -32,8 +32,7 @@
     <main>
         <section class="titre">
             <h1>La note enchantée
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-heart"></i>
+                <i class="titre--heart"></i>
             </h1>
         </section>
 
