--- a/html/le_delice_des_sens.html
+++ b/html/le_delice_des_sens.html
@@ -32,8 +32,7 @@
     <main>
         <section class="titre">
             <h1>Le délice des sens
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-heart"></i>
+                <i class="titre--heart"></i>
             </h1>
         </section>
 
