--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
      
 </head>
 <body>
+    <div class="loader">
+        <span class="loader--element"></span>
+    </div>
     <header>
         <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo_ohmyfood">
     </header>
@@ -78,10 +81,7 @@
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
                     </div>
-                    <div class="restaurants__card--legende--heart">
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                    <i class="restaurants__card--legende--heart"></i>
                     
                 </div>
             </a>
@@ -94,10 +94,7 @@
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
                     </div>
-                    <div class="restaurants__card--legende--heart">
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                    <i class="restaurants__card--legende--heart"></i>
                 </div>
             </a>
 
@@ -108,10 +105,7 @@
                         <h3>À la française</h3>
                         <p>Cité rouge</p>
                     </div>
-                    <div class="restaurants__card--legende--heart">
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                    <i class="restaurants__card--legende--heart"></i>
                 </div>
             </a>
 
@@ -122,10 +116,7 @@
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p>
                     </div>
-                    <div class="restaurants__card--legende--heart">
-                        <i class="fa-regular fa-heart"></i>
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                    <i class="restaurants__card--legende--heart"></i>
                 </div>
             </a>
         </section>
