--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <div class="loader">
-            <span class="loader--element"></span>
+            <span class="loader__element"></span>
         </div>
         <header>
             <img
