--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <main>
             <!--LOCALISATION-->
-            <section class="localisation">
+            <div class="localisation">
                 <p><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
-            </section>
+            </div>
 
             <!--DESCRIPTION-->
             <section class="description">
@@ -60,26 +60,20 @@
             <section class="fonctionnement">
                 <h1>Fonctionnement</h1>
                 <a href="#restaurants" class="fonctionnement__btn">
-                    <button type="button" class="fonctionnement__btn--ordre">
-                        1
-                    </button>
+                    <div class="fonctionnement__btn--ordre">1</div>
                     <i class="fa-solid fa-mobile-screen-button">
                         <span>Choississez un restaurant</span>
                     </i>
                 </a>
                 <a class="fonctionnement__btn">
-                    <button type="button" class="fonctionnement__btn--ordre">
-                        2
-                    </button>
+                    <div class="fonctionnement__btn--ordre">2</div>
                     <i class="fa-solid fa-list">
                         <span>Composez votre menu</span>
                     </i>
                 </a>
 
                 <a class="fonctionnement__btn">
-                    <button type="button" class="fonctionnement__btn--ordre">
-                        3
-                    </button>
+                    <div class="fonctionnement__btn--ordre">3</div>
                     <i class="fa-solid fa-store">
                         <span>Dégustez au restaurant</span>
                     </i>
