--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -202,9 +202,9 @@
                     </div>
                 </a>
             </section>
-            <section class="description">
+            <div class="description">
                 <a class="description__button">Commander</a>
-            </section>
+            </div>
         </main>
 
         <footer>
