--- a/html/le_delice_des_sens.html
+++ b/html/le_delice_des_sens.html
@@ -189,9 +189,9 @@
                     </div>
                 </a>
             </section>
-            <section class="description">
+            <div class="description">
                 <a class="description__button">Commander</a>
-            </section>
+            </div>
         </main>
 
         <footer>
